--- a/lab1/.vscode/tasks.json
+++ b/lab1/.vscode/tasks.json
@@ -1,50 +1,28 @@
 {
-    "version": "2.0.0",
     "tasks": [
         {
-            "type": "shell",
-            "label": "CMake Configure (MinGW)",
-            "command": "cmake",
+            "type": "cppbuild",
+            "label": "C/C++: g++.exe 生成活动文件",
+            "command": "C:\\Program Files\\mingw64\\bin\\g++.exe",
             "args": [
-                "-G", "MinGW Makefiles",
-                "-S", "${workspaceFolder}",
-                "-B", "${workspaceFolder}/build",
-                "-DCMAKE_BUILD_TYPE=Debug",
-                "-DCMAKE_C_COMPILER=\"C:/Program Files/mingw64/bin/gcc.exe\"",
-                "-DCMAKE_CXX_COMPILER=\"C:/Program Files/mingw64/bin/g++.exe\"",
-                "-DCMAKE_MAKE_PROGRAM=\"C:/Program Files/mingw64/bin/mingw32-make.exe\""
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
-                "cwd": "${workspaceFolder}",
-                "shell": {
-                    "executable": "C:/Windows/System32/cmd.exe",
-                    "args": ["/c"]
-                }
+                "cwd": "${fileDirname}"
             },
-            "problemMatcher": "$gcc",
-            "detail": "使用 MinGW 生成构建文件"
-        },
-        {
-            "type": "shell",
-            "label": "CMake Build (MinGW)",
-            "command": "cmake",
-            "args": [
-                "--build", "${workspaceFolder}/build"
+            "problemMatcher": [
+                "$gcc"
             ],
-            "options": {
-                "cwd": "${workspaceFolder}",
-                "shell": {
-                    "executable": "C:/Windows/System32/cmd.exe",
-                    "args": ["/c"]
-                }
-            },
-            "problemMatcher": "$gcc",
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "dependsOn": "CMake Configure (MinGW)",
-            "detail": "构建目标（仅重编译修改的源文件）"
+            "detail": "调试器生成的任务。"
         }
-    ]
+    ],
+    "version": "2.0.0"
 }
